discussion/kv_engine/142067/142067_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-37920: wip

Change-Id: Id2f3976738d9b581a473f77bfa87c2c7bd90d01a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2020-12-14 11:57:36.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-14 12:10:11.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32536/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_bucket.cc(744): error C2039: "setVBucketState": is not a member of "KVStore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32536/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28037/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: no member named "setVBucketState" in "KVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28037/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6245/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:229:15: error: return type of out-of-line definition of "KVStore::updateCachedVBState" differs from that in the declaration [clang-diagnostic-error]
bool KVStore::updateCachedVBState(Vbid vbid, const vbucket_state& state) {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.h:1144:10: note: previous declaration is here
    void updateCachedVBState(Vbid vbid, const vbucket_state& vbState);
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6245/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/kvstore.cc:229:15:
error: return type of out-of-line definition of "KVStore::updateCachedVBState" differs from that in the declaration [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6245/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7721/ : FAILURE

Compile error at [2020-12-14T12:06:49.623Z] ../kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: ?class KVStore? has no member named ?setVBucketState?; did you mean ?getVBucketState??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7721/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7843/ : FAILURE

Compile error at [2020-12-14T12:07:53.899Z] ../kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: ?class KVStore? has no member named ?setVBucketState?; did you mean ?getVBucketState??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7843/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6784/ : FAILURE

Compile error at [2020-12-14T11:59:55.278Z] ../kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: no member named "setVBucketState" in "KVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6784/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8117/ : FAILURE

Compile error at [2020-12-14T11:59:32.156Z] ../kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: no member named "setVBucketState" in "KVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8117/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15661/ : FAILURE

Compile error at [2020-12-14T12:03:37.543Z] ../kv_engine/engines/ep/src/ep_bucket.cc:744:23:
error: no member named "setVBucketState" in "KVStore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15661/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4780/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
